# smartvector

./: .gitignore  LICENSE  README.md  publish.sh  pyproject.toml
docs/: theory_visual.html
examples/: conflict_resolution.py  quickstart.py
src/smartvector/: __init__.py  cli.py  confidence.py  consolidation.py  db.py  factory.py  models.py
tests/: test_confidence.py  test_consolidation.py  test_db.py  test_factory.py  test_models.py
