[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smartvector-rag"
version = "0.1.0"
description = "Self-aware vector embeddings with temporal awareness, confidence decay, and relational intelligence for RAG systems"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Naizhong Xu", email = "xunaizhong@gmail.com"},
]
keywords = ["rag", "vector-database", "embeddings", "nlp", "ai", "knowledge-management", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database",
    "Typing :: Typed",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
]
embeddings = [
    "numpy>=1.24",
    "sentence-transformers>=2.2",
]

[project.scripts]
smartvector = "smartvector.cli:main"

[project.urls]
Homepage = "https://github.com/xunaizhong/smartvector"
Repository = "https://github.com/xunaizhong/smartvector"
Issues = "https://github.com/xunaizhong/smartvector/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
